  _    _          _   _
 | |  | |        | | (_)              
 | |__| |   ___  | |  _    ___    ___
 |  __  |  / _ \ | | | |  / _ \  / __|
 | |  | | |  __/ | | | | | (_) | \__ \
 |_|  |_|  \___| |_| |_|  \___/  |___/


Ragnarok Emulator
Developers & Contributers
- RaX
- Aeomin
- Spre
- RabidCh

--------------------------------------------------------------------------------

-Rev 37-
[2008/09/21] Spre - Added hotkey Table to mysql database.
-

-Rev 36-
[2008/09/21] Spre - Removed The .baks i left.
-

-Rev 35-
[2008/09/22] Spre - Updated SQLITE according to rax, specifications.
[2008/09/22] Spre - Fixed some changelog entries.
-

-Rev 34-
[2008/09/21] Spre - Removed my Mob sql in branches as it is nolonger needed.
-

-Rev 33-
[2008/09/21] Aeomin - Added my devlopment copy of itemdefinition
-

-Rev 32-
[2008/9/21] Spre - Fixed mobs.sql issues. apparently tinyint is the cool thing!(not really, sorry rax... has to be my fault =/)
-

-Rev 31-
[2008/9/21] RaX - Fixed more typos in game.sql.
-

- Rev 30 -
[2008/09/21] Aeomin - Updated mailbox.
-

-Rev 29-
[2008/8/17] RabidCh - Changed item_type in itemdefinions to ENUM.
[2008/8/17] RabidCh - Fixed misspelling of usable in itemdefinitions.
-


-Rev 28-
[2008/6/29] Spre - READDED the mail sql, this time using Aeomins version of it, which works much better.
[2008/6/29] Spre -  Fixed some small issues in SQLITE.
-


-Rev 27-
[2008/6/28] Spre - Fixed a changelog typo :D. Also one small adjustment to the new sqlite update.
-

-Rev 26-
[2008/6/28] Spre - Same as revision 25 but for SQLITE, any issues let me know or revert.
-

-Rev 25-
[2008/6/28] Spre - Went ahead and added some more sql, this will be tweaked as the features get written, this is just a *layout*
-

-Rev 24-
[2008/6/28] Spre - Went ahead and added the mob sql that I never committed to branches/
-

-Rev 23-
[2008/4/10] RabidCh - Most items are completely defined without function names.  Database is missing eggs and ammo items.
-

-Rev 22-